Process Hacker

2.9
 * NEW/IMPROVED:
 * FIXED:
   * Network list bug

2.8
 * NEW/IMPROVED:
   * Better service list (including column selection)
   * Added Peak Handles
   * Process tree sorting is now preserved
   * Save works for services and network connections
   * Pausing now works correctly with the Network tab
   * Added option to display inclusive CPU usages for 
     collapsed processes
   * Added CLR tab to peview
   * Added ability to destroy heaps
   * Improved process tree list appearance
   * Certain command line parameters are now propagated
 * FIXED:
   * Icon handling bugs
   * Memory leaks
   * Extended tooltips for WOW64 processes

2.7
 * NEW/IMPROVED:
   * Vastly improved startup time and lower memory usage
   * Added Cycles and Cycles Delta columns
   * Added option to disable address resolution for 
     network connections
   * Added Logon Time to session properties
   * Added time stamp display to peview
 * FIXED:
   * ToolStatus layout problems
   * .NET highlighting crashes
   * Run As on Windows XP

2.6
 * NEW/IMPROVED:
   * Sorting for most lists is now much faster
   * Hide Signed Processes option
   * Added plugin for uploading files to online virus 
     scanners
   * Added Network tools plugin
   * Updated ExtendedServices plugin
   * PE viewer now verifies checksums
   * Performance improvements
 * FIXED:
   * Fixed service handle leak

2.5
 * NEW/IMPROVED:
   * Unmap section views in Memory tab
   * Plugin for extended service information (including 
     recovery information, dependencies and dependents)
 * FIXED:
   * Critical bug for file dialogs on Windows XP
   * Esc couldn't close Service Properties on open
   * Small bug fixes

2.4
 * NEW/IMPROVED:
   * Better Run As behaviour
   * Show Processes From All Users option
   * Can now unmap section views
   * Control over thread affinity
   * Window Title and Window Status columns
   * Plugin for filtering notifications
   * Plugin for toolbar and status bar